--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
 		<link href="dist/pol.css" rel="stylesheet">
 	</head>
 	<body>
-		<div id="app"></div>
+		<div class="container pt-3">
+			<div class="row">
+				<div class="col text-center">
+					<h1>Politilist</h1>
+				</div>
+			</div>
+		</div>
+		<div id="app">
+			<div class="row">
+				<div class="col text-center p-5">
+					<i class="fas fa-spinner fa-5x fa-spin"></i>
+				</div>
+			</div>
+		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
