--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 					<h1>Politilist</h1>
 				</div>
 			</div>
+			<div className="row">
+				<div class="col">
+					<p>This is a list of all active members of the 116th Congress, using data from ProPublica. Started out as a list of when senators are up for re-election. Made by <a title="The Mighty Cribb website" href="https://www.themightycribb.com/">Brian Cribb</a> using <a title="Politilist GitHub Repository" href="https://github.com/briancribb/politilist">this GitHub repo</a>.</p>
+				</div>
+			</div>
 		</div>
 		<div id="app">
 			<div class="row">
