--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				</div>
 			</div>
 			<div className="row">
-				<div class="col">
+				<div class="col px-0">
 					<p>This is a list of all active members of the 116th Congress, using data from ProPublica. Started out as a list of when senators are up for re-election. Made by <a title="The Mighty Cribb website" href="https://www.themightycribb.com/">Brian Cribb</a> using <a title="Politilist GitHub Repository" href="https://github.com/briancribb/politilist">this GitHub repo</a>.</p>
 				</div>
 			</div>
