--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
 		<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
 		<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+		<script crossorigin src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
 
 		<script src="dist/pol.js"></script>
 	</body>
