--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
 		<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 		<script crossorigin src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
 
-		<script src="dist/pol.js"></script>
+		<script src="dist/pol.js?cb=20200908"></script>
 	</body>
 </html>
