--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="A small project for playing with Propublica data.">
 		<meta name="author" content="Brian Cribb">
-		<title>PolitiList</title>
+		<title>politicianlist</title>
 
 		<!-- Bootstrap core CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -26,12 +26,12 @@
 		<div class="container pt-3">
 			<div class="row">
 				<div class="col text-center">
-					<h1>Politilist</h1>
+					<h1>Politicianlist</h1>
 				</div>
 			</div>
 			<div className="row">
 				<div class="col px-0">
-					<p>This is a list of all active members of the 116th Congress, using data from ProPublica. Started out as a list of when senators are up for re-election. Made by <a title="The Mighty Cribb website" href="https://www.themightycribb.com/">Brian Cribb</a> using <a title="Politilist GitHub Repository" href="https://github.com/briancribb/politilist">this GitHub repo</a>.</p>
+					<p>This is a list of all active members of the 116th Congress, using data from ProPublica. Started out as a list of when senators are up for re-election. Made by <a title="The Mighty Cribb website" href="https://www.themightycribb.com/">Brian Cribb</a> using <a title="Politicianlist GitHub Repository" href="https://github.com/briancribb/politicianlist">this GitHub repo</a>.</p>
 				</div>
 			</div>
 		</div>
