--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 		<!-- Bootstrap core CSS -->
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-		<link href="dist/pol.css" rel="stylesheet">
+		<link href="dist/pol.css?cb=20211701" rel="stylesheet">
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31458680-2"></script>
@@ -49,6 +49,6 @@
 		<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 		<script crossorigin src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
 
-		<script src="dist/pol.js?cb=20200908-1"></script>
+		<script src="dist/pol.js?cb=20211701"></script>
 	</body>
 </html>
