--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 
 
 		<!-- Bootstrap core CSS -->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-		<link href="dist/pol.css?cb=20211701" rel="stylesheet">
+		<link href="dist/pol.css?cb=20211701-1" rel="stylesheet">
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31458680-2"></script>
@@ -53,6 +52,6 @@
 		<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 		<script crossorigin src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
 
-		<script src="dist/pol.js?cb=20211701"></script>
+		<script src="dist/pol.js?cb=20211701-1"></script>
 	</body>
 </html>
