--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<meta name="author" content="Brian Cribb">
 		<title>politicianlist</title>
 
+<link rel="icon" type="image/png" href="src/images/favicon-16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="src/images/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="src/images/favicon-96x96.png" sizes="96x96">
 
 		<!-- Bootstrap core CSS -->
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
